--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # .gitignore
 
+/.clangd/
 /build/
+/compile_commands.json
 /subprojects/fmt-5.3.0/
 /subprojects/fmt-7.1.3/
 /subprojects/googletest-release-1.8.1/
+/subprojects/packagecache/
